--- a/dao-api/pom.xml
+++ b/dao-api/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>com.yauhenikuntsevich.training</groupId>
 		<artifactId>onlinestore</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 
 	<artifactId>dao-api</artifactId>
