--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,20 @@
 				<version>${spring.version}</version>
 				<scope>test</scope>
 			</dependency>
+			
+			<dependency>
+				<groupId>commons-dbcp</groupId>
+				<artifactId>commons-dbcp</artifactId>
+				<version>1.4</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.1</version>
+			</dependency>
+			
+			
 
 			<!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
 			<dependency>
