--- a/services/src/main/resources/db.properties
+++ b/services/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 jdbc.url=jdbc:postgresql://localhost:5432/onlinestore
 jdbc.username=postgres
-jdbc.password=postgres
+jdbc.password=postgres1
 db.schema=public
 
