--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
@@ -6,6 +5,7 @@
 	<groupId>com.yauhenikuntsevich.training</groupId>
 	<artifactId>onlinestore</artifactId>
 	<version>1.0.0</version>
+	
 	<packaging>pom</packaging>
 
 	<properties>
@@ -22,7 +22,8 @@
 		<module>dao-impl-xml</module>
 		<module>services</module>
 		<module>webapp</module>
-	</modules>
+        <module>TestModule</module>
+  </modules>
 
 	<dependencyManagement>
 		<dependencies>
@@ -60,6 +61,12 @@
 			<dependency>
 				<groupId>com.yauhenikuntsevich.training</groupId>
 				<artifactId>webapp</artifactId>
+				<version>1.0.0</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>com.yauhenikuntsevich.training</groupId>
+				<artifactId>TestModule</artifactId>
 				<version>1.0.0</version>
 			</dependency>
 			
@@ -120,24 +127,28 @@
 			</dependency>
 			
 			<dependency>
-				<groupId>commons-dbcp</groupId>
-				<artifactId>commons-dbcp</artifactId>
-				<version>1.4</version>
-			</dependency>
-
-			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
 				<version>3.1</version>
 			</dependency>
-			
-			
 
-			<!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
 			<dependency>
-				<groupId>postgresql</groupId>
+				<groupId>org.postgresql</groupId>
 				<artifactId>postgresql</artifactId>
-				<version>9.4.1208-jdbc42-atlassian-hosted</version>
+				<version>9.3-1100-jdbc41</version>
+			</dependency>
+
+			<dependency>
+				<groupId>commons-dbcp</groupId>
+				<artifactId>commons-dbcp</artifactId>
+				<version>1.4</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.12</version>
+				<scope>test</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
