--- a/dao-api/pom.xml
+++ b/dao-api/pom.xml
@@ -28,5 +28,10 @@
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-jcl</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.yauhenikuntsevich.training</groupId>
+			<artifactId>datamodel</artifactId>
+		</dependency>
 	</dependencies>
 </project>
