--- a/dao-impl-xml/pom.xml
+++ b/dao-impl-xml/pom.xml
@@ -12,6 +12,43 @@
 	<packaging>jar</packaging>
 
 	<dependencies>
+	
+	<dependency>
+			<groupId>com.yauhenikuntsevich.training</groupId>
+			<artifactId>datamodel</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.yauhenikuntsevich.training</groupId>
+			<artifactId>dao-api</artifactId>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.thoughtworks.xstream</groupId>
+			<artifactId>xstream</artifactId>
+		</dependency>
+	
 	<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
