--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,12 @@
 				<artifactId>commons-lang3</artifactId>
 				<version>3.1</version>
 			</dependency>
+			
+			<dependency>
+				<groupId>commons-io</groupId>
+				<artifactId>commons-io</artifactId>
+				<version>2.5</version>
+			</dependency>
 
 			<dependency>
 				<groupId>org.postgresql</groupId>
@@ -145,6 +151,12 @@
 				<version>9.3-1102.jdbc41</version>
 			</dependency>
 
+			<!-- https://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream -->
+			<dependency>
+				<groupId>com.thoughtworks.xstream</groupId>
+				<artifactId>xstream</artifactId>
+				<version>1.4.9</version>
+			</dependency>
 
 			<dependency>
 				<groupId>commons-dbcp</groupId>
