--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -3,46 +3,42 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://www.oracle.com/webfolder/technetwork/jsc/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
 
-	<display-name>myproject</display-name>
+	<display-name>onlinestore</display-name>
 
-	<!-- There are three means to configure Wickets configuration mode and they 
-		are tested in the order given. 1) A system property: -Dwicket.configuration 
-		2) servlet specific <init-param> 3) context specific <context-param> The 
-		value might be either "development" (reloading when templates change) or 
-		"deployment". If no configuration is found, "development" is the default. -->
+   <servlet>
+      <servlet-name>HelloWeb</servlet-name>
+      <servlet-class>
+         org.springframework.web.servlet.DispatcherServlet
+      </servlet-class>
+      <init-param>
+	    <param-name>contextConfigLocation</param-name>
+	    <param-value>classpath:web-applicationContext.xml</param-value>
+	</init-param>
+      <load-on-startup>1</load-on-startup>
+   </servlet>
 
-	<!--context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:spring-context.xml</param-value>
-	</context-param>
-	<listener>
-		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
-
-	<filter>
-		<filter-name>wicket.myproject</filter-name>
-		<filter-class>org.apache.wicket.protocol.http.WicketFilter</filter-class>
-		<init-param>
-			<param-name>applicationFactoryClassName</param-name>
-			<param-value>org.apache.wicket.spring.SpringWebApplicationFactory</param-value>
-		</init-param>
-		<init-param>
-			<param-name>applicationBean</param-name>
-			<param-value>MyWebApplication</param-value>
-		</init-param>
+   <servlet-mapping>
+      <servlet-name>HelloWeb</servlet-name>
+      <url-pattern>/</url-pattern>
+   </servlet-mapping>
+   
+   	<filter>
+	   <filter-name>LogFilter</filter-name>
+	   <filter-class>com.yauhenikuntsevich.training.onlinestore.web.servlets.LogFilter</filter-class>
 	</filter>
 
-
-
-
 	<filter-mapping>
-		<filter-name>wicket.myproject</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping-->
-
-
-
-
-
-
+	   <filter-name>LogFilter</filter-name>
+	   <url-pattern>/</url-pattern>
+	</filter-mapping>
+   
+   <servlet-mapping>
+	   <servlet-name>ServletExample</servlet-name>
+	   <url-pattern>/myFirtsService</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+	   <servlet-name>ServletExample</servlet-name>
+	   <servlet-class>com.yauhenikuntsevich.training.onlinestore.web.servlets.ServletExample</servlet-class>
+	</servlet>
 </web-app>
