--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
       <url-pattern>/</url-pattern>
    </servlet-mapping>
    
-   	<filter>
+   	<!-- <filter>
 	   <filter-name>LogFilter</filter-name>
 	   <filter-class>com.yauhenikuntsevich.training.onlinestore.web.servlets.LogFilter</filter-class>
 	</filter>
@@ -30,9 +30,9 @@
 	<filter-mapping>
 	   <filter-name>LogFilter</filter-name>
 	   <url-pattern>/</url-pattern>
-	</filter-mapping>
+	</filter-mapping> -->
    
-   <servlet-mapping>
+   <!-- <servlet-mapping>
 	   <servlet-name>ServletExample</servlet-name>
 	   <url-pattern>/myFirtsService</url-pattern>
 	</servlet-mapping>
@@ -40,5 +40,5 @@
 	<servlet>
 	   <servlet-name>ServletExample</servlet-name>
 	   <servlet-class>com.yauhenikuntsevich.training.onlinestore.web.servlets.ServletExample</servlet-class>
-	</servlet>
+	</servlet> -->
 </web-app>
