--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 	<display-name>onlinestore</display-name>
 
    <servlet>
-      <servlet-name>HelloWeb</servlet-name>
+      <servlet-name>spring-dispatcher</servlet-name>
       <servlet-class>
          org.springframework.web.servlet.DispatcherServlet
       </servlet-class>
@@ -18,9 +18,24 @@
    </servlet>
 
    <servlet-mapping>
-      <servlet-name>HelloWeb</servlet-name>
+      <servlet-name>spring-dispatcher</servlet-name>
       <url-pattern>/</url-pattern>
    </servlet-mapping>
+   
+   <!-- <filter>
+	<filter-name>springSecurityFilterChain</filter-name>
+	<filter-class>org.springframework.web.filter.DelegatingFilterProxy
+                </filter-class>
+	</filter>
+
+	<filter-mapping>
+	<filter-name>springSecurityFilterChain</filter-name>
+	<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
+ 	<listener>
+<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+</listener>  -->
    
    	<!-- <filter>
 	   <filter-name>LogFilter</filter-name>
