Add password and role in db, correct all classes

--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,17 @@
 
 	<display-name>onlinestore</display-name>
 
+	<context-param>
+	    <param-name>contextConfigLocation</param-name>
+	    <param-value>classpath:service-context.xml</param-value>
+	</context-param>
+
+	<listener>
+   		<listener-class>
+        org.springframework.web.context.ContextLoaderListener
+   		</listener-class>
+	</listener> 
+
    <servlet>
       <servlet-name>spring-dispatcher</servlet-name>
       <servlet-class>
@@ -17,12 +28,22 @@
       <load-on-startup>1</load-on-startup>
    </servlet>
 
-   <servlet-mapping>
+   	<servlet-mapping>
       <servlet-name>spring-dispatcher</servlet-name>
       <url-pattern>/</url-pattern>
-   </servlet-mapping>
+   	</servlet-mapping>
    
-   <!-- <filter>
+ 	<filter>
+	   <filter-name>BasicAuthFilter</filter-name>
+	   <filter-class>com.yauhenikuntsevich.training.onlinestore.web.servlets.BasicAuthFilter</filter-class>
+	</filter>
+   
+   	<filter-mapping>
+	   <filter-name>BasicAuthFilter</filter-name>
+	   <url-pattern>/*</url-pattern>
+	</filter-mapping>
+   
+  	 <filter>
 	<filter-name>springSecurityFilterChain</filter-name>
 	<filter-class>org.springframework.web.filter.DelegatingFilterProxy
                 </filter-class>
@@ -34,8 +55,8 @@
 	</filter-mapping>
 	
  	<listener>
-<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-</listener>  -->
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
    
    	<!-- <filter>
 	   <filter-name>LogFilter</filter-name>
