--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,7 @@
    		</listener-class>
 	</listener> 
 
+
    <servlet>
       <servlet-name>spring-dispatcher</servlet-name>
       <servlet-class>
@@ -33,48 +34,31 @@
       <url-pattern>/</url-pattern>
    	</servlet-mapping>
    
+   
  	<filter>
 	   <filter-name>adminAuthFilter</filter-name>
-	   <filter-class>com.yauhenikuntsevich.training.onlinestore.web.servlets.AdminAuthFilter</filter-class>
+	   <filter-class>com.yauhenikuntsevich.training.onlinestore.web.filter.AdminAuthFilter</filter-class>
 	</filter>
    
    	<filter-mapping>
 	   <filter-name>adminAuthFilter</filter-name>
 	   <url-pattern>/admin/*</url-pattern>
 	</filter-mapping>
+	
+	
+	<filter>
+	   <filter-name>clientAuthFilter</filter-name>
+	   <filter-class>com.yauhenikuntsevich.training.onlinestore.web.filter.ClientAuthFilter</filter-class>
+	</filter>
+   
+   	<filter-mapping>
+	   <filter-name>clientAuthFilter</filter-name>
+	   <url-pattern>/client/*</url-pattern>
+	</filter-mapping>
+   
    
  	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-   
-   <!-- <filter>
-	<filter-name>springSecurityFilterChain</filter-name>
-	<filter-class>org.springframework.web.filter.DelegatingFilterProxy
-                </filter-class>
-	</filter>
-
-	<filter-mapping>
-	<filter-name>springSecurityFilterChain</filter-name>
-	<url-pattern>/*</url-pattern>
-	</filter-mapping> -->
-   
-   	<!-- <filter>
-	   <filter-name>LogFilter</filter-name>
-	   <filter-class>com.yauhenikuntsevich.training.onlinestore.web.servlets.LogFilter</filter-class>
-	</filter>
-
-	<filter-mapping>
-	   <filter-name>LogFilter</filter-name>
-	   <url-pattern>/</url-pattern>
-	</filter-mapping> -->
-   
-   <!-- <servlet-mapping>
-	   <servlet-name>ServletExample</servlet-name>
-	   <url-pattern>/myFirtsService</url-pattern>
-	</servlet-mapping>
-	
-	<servlet>
-	   <servlet-name>ServletExample</servlet-name>
-	   <servlet-class>com.yauhenikuntsevich.training.onlinestore.web.servlets.ServletExample</servlet-class>
-	</servlet> -->
+ 
 </web-app>
